--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 beautifulsoup4==4.4.1
 boto==2.39.0
 dj-database-url==0.4.1
+dj-static==0.0.6
 Django==1.8
 django-herokuapp==0.9.20
 django-require==1.0.10
@@ -26,6 +27,7 @@ schedule==0.3.2
 sh==1.11
 simplejson==3.8.2
 six==1.10.0
+static3==0.6.1
 waitress==0.8.10
 wheel==0.26.0
 whitenoise==3.0
